# rust-image-generator

./: Cargo.toml  README.md
src/: evolution_algorithm.rs  graphic_controller.rs  images_comparator.rs  main.rs  stamp_generator.rs
