[package]
name = "rust-image-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
async-std = "1.12.0"
futures = "0.3.30"
image = "0.25.2"
image-compare = "0.4.1"
imageproc = "0.25.0"
ordered-float = "4.2.2"
rand = "0.8.5"
rayon = "1.10.0"
rusttype = "0.9.3"
tokio = { version = "1", features = ["full"] }
winit = "0.30.5"
